# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json  docker-compose.yml
.claude/skills/cerebras/: SKILL.md
backend/: README.md  pyproject.toml
backend/app/: config.py  database.py  health.py  main.py
backend/app/auth/: __init__.py  deps.py  models.py  router.py  security.py
backend/app/chat/: __init__.py  llm.py  models.py  router.py  service.py
backend/app/documents/: SCHEMA.md  __init__.py  models.py  registry.py  router.py
backend/app/documents/specs/: ai-addendum.json  baa.json  csa.json  design-partner.json  dpa.json  mutual-nda.json  partnership.json  pilot.json  psa.json  sla.json  software-license.json
backend/app/nda/: __init__.py  models.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_health.py  test_nda.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/components/: AuthForm.tsx  ChatPanel.tsx  DocumentChat.tsx  DocumentPdf.tsx  DocumentPicker.tsx  DocumentPreview.tsx  NdaChat.tsx  NdaCreator.tsx  NdaDocument.pdf.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/src/lib/: api.ts  auth.tsx  buildDocument.ts  buildMarkdown.ts  documents.ts  download.ts  markdown.ts  nda.ts  standardTerms.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
(+1 files in other folders)
